appserver/Gemfile
source 'https://rubygems.org'

gem 'rails', '3.2.22'

# Bundle edge Rails instead:
# gem 'rails', :git => 'git://github.com/rails/rails.git'

gem 'activerecord-jdbcpostgresql-adapter'

gem 'jruby-openssl'

# Gems used only for assets and not required
# in production environments by default.
group :assets do
  gem 'sass-rails',   '~> 3.2.3'
  gem 'coffee-rails', '~> 3.2.1'

  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
  gem 'therubyrhino'

  gem 'uglifier', '>= 1.0.3'
end

gem 'jquery-rails'

# To use ActiveModel has_secure_password
# gem 'bcrypt-ruby', '~> 3.0.0'

# To use Jbuilder templates for JSON
# gem 'jbuilder'

# Use unicorn as the app server
# gem 'unicorn'

# Deploy with Capistrano
# gem 'capistrano'

# To use debugger
# gem 'debugger'
#
############################################

gem 'torquebox', '3.1.2', platforms: [:jruby]
gem 'torquebox-messaging', '3.1.2', platforms: [:jruby]
gem 'torquebox-server', '3.1.2', platforms: [:jruby]
gem 'uuid'
gem 'omniauth-oauth2'

=begin
# fix for ruby 1.9.x syntax
SyntaxError: /appserver/vendor/gems/doorkeeper-3.0.0/lib/doorkeeper/rails/helpers.rb:14: syntax error, unexpected tLABEL
      def doorkeeper_unauthorized_render_options(error: nil)
                                                       ^
=end
gem 'doorkeeper', path: "/gems/doorkeeper-3.0.0" 
